Added root index.html

--- a/graph-creation-on-map/index.html
+++ b/graph-creation-on-map/index.html
@@ -716,7 +716,7 @@
 
     </script>
     <script async defer
-    src="https://maps.googleapis.com/maps/api/js?callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHs9QINWjk-uO7l-jGjguQXd-avhE207o&callback=initMap">
     </script>
   </body>
 </html>
