--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
   </head>
   <body>
-    <a href="graph-creation-on-map/index.html">Google map route creation demo</a>
+  	<h3> Google Map Route Creation Demo </h3>
+    <a href="graph-creation-on-map/index.html">Go to demo...</a>
   </body>
 </html>
